Fix z-index

--- a/src/components/AlertMessage/style.scss
+++ b/src/components/AlertMessage/style.scss
@@ -1,6 +1,6 @@
 #box-react-alert-message {
   position: fixed;
-  z-index: 3;
+  z-index: 99;
   top: 0;
   left: 0;
   right: 0;
