--- a/src/components/Toastify/style.scss
+++ b/src/components/Toastify/style.scss
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 5;
+  z-index: 98;
   pointer-events: none;
   padding: 0 20px;
 }
@@ -25,8 +25,8 @@
   margin-top: 20px;
   padding: 10px 16px;
   border-radius: 4px;
-  -webkit-box-shadow: 0 4px 12px rgba(0, 0, 0, .15);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, .15);
+  -webkit-box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
   background: #fff;
   display: inline-block;
   pointer-events: all;
